# ChatGPT-Compliance

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  models.py  pipeline.py  policy_engine.py  reporting.py  storage.py
app/connectors/: __init__.py  base.py  enterprise_api.py  file_source.py
app/utils/: logger.py
compliance_script/: __init__.py  microsoft_cloud.py  run_pipeline.py  scan_prompt_compliance.py
data/: compliance_reporting.db
data/policies/: company_policy_rules.json  openai_policy_rules.json
data/sample_exports/: chatgpt_enterprise_logs.ndjson
gpt_compliance_exporter/: __init__.py  cli.py  client.py  exporter.py  extraction.py
reports/: weekly_20260427T185551Z_detail.csv  weekly_20260427T185551Z_summary.json  weekly_20260427T185610Z_summary.json  weekly_20260427T185654Z_summary.json  weekly_20260427T190106Z_summary.json  weekly_20260427T190108Z_summary.json  weekly_20260427T204457Z_summary.json
test_output/0e69c67d-5df1-42c6-b215-bb597236e8bf/: compliance.db
test_output/2eebc834-ffff-4631-9d1d-88009a085806/: compliance.db
test_output/9da7421c-528b-4ac4-9df1-bc21cc4fa9cc/: compliance.db
test_output/d69bbd55-003e-4c28-ab89-0d426ec4327d/: compliance.db
test_output/d69bbd55-003e-4c28-ab89-0d426ec4327d/reports/: weekly_20260427T185654Z_summary.json
test_output/e820f89f-a3c4-4ce9-96c9-1905acecaf22/: compliance.db
tests/: __init__.py  test_client.py  test_compliance_scan.py  test_exporter.py  test_extraction.py  test_microsoft_cloud.py  test_pipeline.py
(+1 files in other folders)
