[project]
name = "gpt-compliance-exporter"
version = "0.1.0"
description = "Barebones ChatGPT Enterprise Compliance Logs prompt exporter."
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
gpt-compliance-exporter = "gpt_compliance_exporter.cli:main"
gpt-compliance-pipeline = "compliance_script.run_pipeline:main"

[tool.setuptools.packages.find]
include = ["gpt_compliance_exporter*", "compliance_script*"]
